# python-project-lvl2

./: .coverage  .gitignore  .travis.yml  Makefile  README.md  answer_nested.txt  coverage.xml  file.json  file1.json  file1.yaml  file2.json  file2.yaml  file2_nested.yaml  pyproject.toml  typescript
gendiff/: .coverage  cli.py  engine.py  gendiff.py  gendiff_func.py  gendiff_main.py  generate_diff.py  loader.py  parsers.py  script.py  scripts.py
gendiff/comparing_tools/: gendiff_tool.py
gendiff/format/: __init__.py  default.py  json.py  plain.py
gendiff/formatters/: render_json.py  render_nested.py  render_plain.py
gendiff/formatters/json/: rendering_tool.py
gendiff/formatters/nested/: gendiff_tool.py  rendering_tool.py
gendiff/formatters/plain/: gendiff_tool.py  rendering_and_gendiff_tool.py  rendering_tool.py
gendiff/parsers/: parsers.py
gendiff/scripts/: gendiff.py  gendiff_json.py  gendiff_yaml.py  script.py  scripts.py
gendiff/tests/: gendiff_test.py
gendiff/tests/fixtures/: answer1.txt  answer_nested_json.txt  file1.json  file1_nested.yaml  file2.json  library.py
gendiff/tools/: gendiff_tool.py  gendiff_tools.py  rendering_tool.py
tests/: gendiff_test.py
tests/fixtures/: answer_json.json
