[tool.poetry]
name = "franky_gendiff"
version = "0.5.0"
description = ""
authors = ["Your Name <you@example.com>"]

packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"


[tool.poetry.scripts]
gendiff= "gendiff.gendiff_main:gendiff"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"